[project]
name = "darkweb_tokenizers"
version = "0.1.0"
description = "Darkweb Tokenizers and Lexical."
authors = [
    {name = "Flare Systens"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

# Requirements: This is done differently by poetry!
dependencies = [
    "Cython",
    "youtokentome"
]


[project.urls]
homepage = "https://github.com/Flared/darkweb-tokenizers"


[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''